--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,6 +6,14 @@
 @use "sass:color";
 
 // Colors
+$stevens-red-color: #A32638 !default;
+$stevens-gray-color: #7F7F7F !default;
+$stevens-darkgray-color: #363D45 !default;
+$stevens-darkblue-color: #004380 !default;
+$stevens-lightgray-color: #E4E5E6 !default;
+$stevens-medblue-color: #4896CF !default;
+$stevens-orange-color: #E7842E !default;
+$stevens-gold-color: #EBC73B !default;
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
