--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -17,7 +17,7 @@
               {{- site.last_name -}}
             {% endif %}
           {% else %}
-            {{- VAEL -}}
+            {{- site.short_title -}}
           {% endif %}
         </a>
       {% elsif site.enable_navbar_social %}
