Update short  title

--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -24,7 +24,7 @@
   {% if site.title == 'blank' %}
     {% capture title %}{{ author_name }}{% endcapture %}
   {% else %}
-    {% capture title %}{{ site.title }}{% endcapture %}
+    {% capture title %}{{ site.short_title }}{% endcapture %}
   {% endif %}
   {% if page.url == '/blog/index.html' %}
     {{ page.title }} | {{ title }}
